--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">面试Demo</string>
+    <string name="consume">MOP/人</string>
+    <string name="local">清除本地数据</string>
+    <string name="network">获取网络数据</string>
+    <string name="empty">本地数据为空,请获取网络数据!</string>
+    <string name="loading">正在加载中...</string>
 
 </resources>
